Fixed a couple SEO issues

--- a/frontend/styles/globals.scss
+++ b/frontend/styles/globals.scss
@@ -18,7 +18,7 @@ a {
   --fg: #0F1115;
   --fg-05: rgba(15,17,21, 0.07);
   --bg: white;
-  --green: #29C229;
+  --green: #27b827;
 }
 
 @media (prefers-color-scheme: dark) {
