Added list of subjects hidden

--- a/frontend/styles/Home.module.scss
+++ b/frontend/styles/Home.module.scss
@@ -147,3 +147,11 @@
     }
   }
 }
+
+.unsearched {
+  display: flex;
+  height: 64px;
+  width:100%;
+  justify-content: center;
+  align-items: center;
+}
