--- a/frontend/styles/Home.module.scss
+++ b/frontend/styles/Home.module.scss
@@ -155,3 +155,9 @@
   justify-content: center;
   align-items: center;
 }
+
+.hiddenSeo {
+  position: absolute;
+  left:-10000px;
+  opacity: 0;
+}
